--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -152,6 +152,7 @@ jobs:
           push: true
           tags: lericon/taski_gateway:latest
 
+  #Отправка сообщения
   send_message:
     runs-on: ubuntu-latest
     needs:
